# llm

./: .dockerignore  .env  .env''  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.multistage  MANIFEST.in  README.md  benchmark_baseline_results.json  benchmark_fallback_fix.json  benchmark_final_rrf.json  benchmark_final_rrf_debug.json  benchmark_final_rrf_tuned.json  benchmark_model_ko_fix.json  benchmark_reranker_fix.json  benchmark_upgrade_results.json  check_benchmark.py  check_stdout.py  check_vector_norm.py  clear_cache.py  data_sample.json  debug_conn.py  debug_payload_size.py  debug_recall_output.txt  demo.py  diagnosis_report.json  docker-compose.monitor.yml  docker-compose.yml  dump 2.rdb  dump.rdb  environment.yml  find_kss_loggers.py  finetune_data.jsonl  fix_kss.py  inspect_client_attrs.py  inspect_http.py  inspect_loggers.py  inspect_qdrant.py  (+14 more)
.keys/: user_a.key  user_b.key  user_secret_agent.key
DB/: README.md  entityize_csweb_profs.py  generate_course_entities.py  helper.py  parse_undergrad_courses.py  rebuild.sh  rebuild_from_data.py  rebuild_vectors_from_data.py  seed_graduate_courses.sql  seed_undergrad_courses.sql  setting.sql  utils.py
bge-m3-finetuned-academic/: config.json
config/: defaults.yaml  development.yaml  production.yaml  staging.yaml  vectorstore.yaml
crawler/: common.py
data/: entity.md  format.py  level0.md  ontology.md
docs/: README.md
examples/: 01_library_mode.py  02_client_mode.py
models/: bm25_vectorizer.pkl
qdrant_data/: raft_state.json
scripts/: api_search_client.py  backup_infra.py  (+27 more)
(+6163 files in other folders)
