[project]
name = "socchatbot-llm"
version = "0.1.0"
description = "KAIST SoC chatbot crawler, data pipeline, and backend utilities"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "beautifulsoup4>=4.13.4",
  "fastapi>=0.115.0",
  "google-generativeai>=0.8.4",
  "jinja2>=3.1.0",
  "nltk>=3.9.0",
  "numpy>=2.0.0",
  "openai>=1.0.0",
  "pdfplumber>=0.11.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.10.0",
  "python-docx>=1.1.2",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
  "regex>=2024.11.6",
  "requests>=2.32.0",
  "selenium>=4.30.0",
  "sqlalchemy>=2.0.0",
  "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
